--- a/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
+++ b/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
@@ -6,9 +6,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:extensions="using:MoneySplitter.Win10.Extensions"
+    xmlns:converters="using:MoneySplitter.Win10.Converters"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.Resources>
+        <converters:OppositeBoolToVisibilityConverter x:Key="OppositeBoolToVisibilityConverter"/>
+    </UserControl.Resources>
     <Grid Margin="5"
           HorizontalAlignment="Stretch">
         <StackPanel>
@@ -28,10 +32,20 @@
             <TextBlock Text="{x:Bind ViewModel.Email, Mode=OneWay}"
                        HorizontalAlignment="Stretch"
                        TextTrimming="CharacterEllipsis"/>
-            <Button Click="OnAddOrRemoveButtonClick" Content="{x:Bind ButtonContent, Mode=OneWay}" 
+            <Button Click="OnAddOrRemoveButtonClick" 
                     Style="{ThemeResource TextBlockButtonStyle}"
-                    HorizontalAlignment="Center"/>
-            
+                    HorizontalAlignment="Center">
+                <Button.Content>
+                    <Grid>
+                        <TextBlock extensions:XamlElementExtensions.Resource="REMOVE_BUTTON_CONTENT"
+                                   Visibility="{x:Bind IsRemove, Mode=OneWay}"/>
+                        <TextBlock extensions:XamlElementExtensions.Resource="ADD_BUTTON_CONTENT" 
+                                   Visibility="{x:Bind IsRemove, Converter={StaticResource OppositeBoolToVisibility}, Mode=OneWay}" />
+                    </Grid>
+                </Button.Content>
+            </Button>
+
+
         </StackPanel>
     </Grid>
 </UserControl>
