--- a/MoneySplitter.Win10/Views/IncomingAndOutgoingView.xaml
+++ b/MoneySplitter.Win10/Views/IncomingAndOutgoingView.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="MoneySplitter.Win10.Views.IncomingAndOutcomingView"
+    x:Class="MoneySplitter.Win10.Views.IncomingAndOutgoingView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MoneySplitter.Win10.Views"
@@ -7,6 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:MoneySplitter.Models"
     xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+    xmlns:extensions="using:MoneySplitter.Win10.Extensions"
+    
     mc:Ignorable="d">
     <Grid>
         <ScrollViewer>
@@ -31,7 +33,7 @@
                        HorizontalAlignment="Center"
                        Foreground="#2C404B"
                        FontSize="18"
-                       Text="Debters"/>
+                       extensions:XamlElementExtensions.Resource="DEBTERS_TEXTBLOCK_TEXT"/>
                     <ListView x:Name="DebtorsList"
                           ItemsSource="{x:Bind ViewModel.Debtors, Mode=OneWay}"
                           IsItemClickEnabled="True"
@@ -64,7 +66,7 @@
                        HorizontalAlignment="Center"
                        Foreground="#2C404B"
                        FontSize="18"
-                       Text="Lend persons"/>
+                      extensions:XamlElementExtensions.Resource="LEND_PERSONS_TEXTBLOCK_TEXT"/>
 
                     <ListView x:Name="LendPersonsList"
                           ItemsSource="{x:Bind ViewModel.LendPersons, Mode=OneWay}"
