--- a/MoneySplitter.Win10/Views/TransactionsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionsView.xaml
@@ -7,6 +7,7 @@
       xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
       xmlns:models="using:MoneySplitter.Models"
       xmlns:modelsApp="using:MoneySplitter.Models.App"
+      xmlns:extensions="using:MoneySplitter.Win10.Extensions"     
       mc:Ignorable="d">
     <Page.Resources>
         <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
@@ -20,7 +21,7 @@
                        HorizontalAlignment="Center"
                        Foreground="#2C404B"
                        FontSize="18"
-                       Text="You daon't have transactions("
+                       extensions:XamlElementExtensions.Resource="NOT_TRANSACTIONS_TEXTBLOCK_TEXT"
                        Visibility="{x:Bind ViewModel.IsNotTransactionsTextVisibility, Mode=OneWay}"/>
             <StackPanel>
                 <StackPanel Orientation="Horizontal"
@@ -33,7 +34,7 @@
                             <StackPanel Orientation="Horizontal">
                                 <FontIcon Glyph="&#xE109;"
                                           FontSize="12"/>
-                                <TextBlock  Text="ADD"
+                                <TextBlock extensions:XamlElementExtensions.Resource="ADD_HIGH_REGISTR_BUTTON_CONTENT"
                                             FontSize="14"
                                             Margin="8,0,0,0"/>
 
