--- a/MoneySplitter.Win10/Styles/ColorsAndBrushes.xaml
+++ b/MoneySplitter.Win10/Styles/ColorsAndBrushes.xaml
@@ -9,5 +9,7 @@
     <SolidColorBrush x:Key="DarkGrayColorBrush" Color="#464646"/>
     <SolidColorBrush x:Key="BorderImageBrush" Color="#c7c1c1"/>
     <SolidColorBrush x:Key="MainBrush" Color="#2C404B"/>
+    <SolidColorBrush x:Name="RedBrush" Color="Red"/>
+    <SolidColorBrush x:Name="GreenBrush" Color="Green"/>
 
 </ResourceDictionary>
