--- a/MoneySplitter.Win10/Styles/GlobalStyles.xaml
+++ b/MoneySplitter.Win10/Styles/GlobalStyles.xaml
@@ -3,6 +3,7 @@
                     xmlns:local="using:MoneySplitter.Win10.Styles">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ColorsAndBrushes.xaml"/>
+        <ResourceDictionary Source="Icons.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="Button" x:Key="DefaultButtonStyle">
@@ -61,7 +62,7 @@
         <Setter Property="Padding" Value="{ThemeResource TextControlThemePadding}"/>
         <Setter Property="Margin" Value="5"/>
     </Style>
-    
+
     <Style x:Key="ControlMainTextStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
