--- a/MoneySplitter.Win10/Styles/Icons.xaml
+++ b/MoneySplitter.Win10/Styles/Icons.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Styles">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <x:String x:Key="RingerIcon">&#xEA8F;</x:String>
     <x:String x:Key="ArrowUpIcon">&#xF0AD;</x:String>
