--- a/MoneySplitter.Win10/Styles/GlobalStyles.xaml
+++ b/MoneySplitter.Win10/Styles/GlobalStyles.xaml
@@ -63,14 +63,17 @@
         <Setter Property="Margin" Value="5"/>
     </Style>
 
-    <Style x:Key="ControlMainTextStyle" TargetType="TextBlock">
+    <Style x:Key="FullNameTextStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+        <Setter Property="TextTrimming" Value="WordEllipsis"/>
     </Style>
-    <Style x:Key="ControlAdditionTextStyle" TargetType="TextBlock">
+    <Style x:Key="EmailNameTextStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="Foreground" Value="{StaticResource DarkGrayColorBrush}"/>
+        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
     </Style>
+    
     <Style x:Key="ListHeaderTextStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="18"/>
         <Setter Property="Foreground" Value="{StaticResource MainBrush}"/>
